# blpapi-mcp

./: .env.gateway.example  .env.worker.example  .gitignore  DEPLOYMENT.md  README.md  SSE_PLAN.md  TAILSCALE_PLAN.md  pyproject.toml
src/blpapi_mcp/: __init__.py  _options_screen.py  blp_mcp_server.py  gateway.py  types.py
tests/: test_helpers.py
