[project]
name = "blpapi-mcp-chatgpt"
version = "0.1.0"
description = "A MCP server providing financial data from Bloomberg blpapi"
readme = "README.md"
authors = [
    { name = "Samuel Seng", email = "djsamseng@gmail.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "blpapi>=3.25.3",
    "mcp[cli]>=1.6.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
blpapi-mcp-chatgpt = "blpapi_mcp:main"
blpapi-worker-chatgpt = "blpapi_mcp:main"
blpapi-gateway-chatgpt = "blpapi_mcp.gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blpapi_mcp"]

[tool.uv.sources]
blpapi = { index = "blpapi" }

[[tool.uv.index]]
name = "blpapi"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
explicit = true
